fix issue with background color of the body not showing up in mobile view

--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -761,6 +761,10 @@ a:hover {
     border-top: 13px solid #f72210;
   }
 
+  .main-content {
+    background-color: white;
+  }
+
   .top-story,
   .featured-stories-section,
   .the-debate {
